--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,27 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+  background-color: rgb(48, 48, 48);
+  color: rgb(255, 255, 255);
   min-height: 100vh;
   display: flex;
   flex-direction: column;
+  padding: 10px 50px
+}
+
+.App-message-container {
+  display: flex;
+  color: rgb(255, 255, 255);
+  background: rgb(66, 66, 66);
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin: 10px;
+  padding: 16px;
+  box-shadow: rgba(0, 0, 0, 0.2) 0px 2px 1px -1px, rgba(0, 0, 0, 0.14) 0px 1px 1px 0px, rgba(0, 0, 0, 0.12) 0px 1px 3px 0px;
+  border-radius: 4px;
 }
 
-.App-link {
-  color: #61dafb;
+.App-message-heading {
+  margin: 0;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.App-message {
+  margin: 0 10px;
 }
